agrego media queri

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <title>Mini landing</title>
 </head>
 <body>
@@ -31,5 +32,26 @@
             </div>
         </div>
     </main>
+
+    <div class="personal-container">
+        <div class="personal-content">
+            <h2>FFreelance</h2>
+            <p>This website focuses on showing freelancers who can help any type of company, production company or agency. Page with unique content relevant to your market. It also carries out abdominal search processes to verify the quality of its freelances.
+            </p>
+            <div class="personal-btn">
+                <button>Call to action</button>
+                <button>Learn more</button>
+            </div>
+        </div>
+        <div class="personal-pic">
+            <img src="./images/faq.jpg" alt="" id="faq">
+        </div>
+    </div>
+
+    <div class="personal-desc-container">
+        <div class="personal-desc-content">
+            <p>Landing is a new company focused on "connecting the creative", offering freelance services for creative people, small and independent companies. A website with a blog where I will be posting all the details required for starting a project from scratch.!</p>
+        </div>
+    </div>
 </body>
 </html>
