borro el logo de nucba

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                  <li class="list-item">Issues</li>
                  <li class="list-item">Info</li>
                 </ul>
-                <img src="./images/nucba-icon.png" alt="" class="nucba-icon">
+                <img src="" alt="" class="nucba-icon">
             </nav>
             <div class="info-container">
               <div class="info-content">
