cambio la palabra landing por FFreelance

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="personal-desc-container">
         <div class="personal-desc-content">
-            <p>Landing is a new company focused on "connecting the creative", offering freelance services for creative people, small and independent companies. A website with a blog where I will be posting all the details required for starting a project from scratch.!</p>
+            <p>FFreelance is a new company focused on "connecting the creative", offering freelance services for creative people, small and independent companies. A website with a blog where I will be posting all the details required for starting a project from scratch.!</p>
         </div>
     </div>
 </body>
