agrego actividad clase 4 eduflow

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
+    <script src="https://kit.fontawesome.com/8664e20ce4.js" crossorigin="anonymous"></script>
     <title>Mini landing</title>
 </head>
 <body>
@@ -13,22 +14,22 @@
         <div class="card-content">
             <nav class="navbar">
                 <ul class="list">
-                 <li class="list-item">Team</li>
-                 <li class="list-item">Contact</li>
-                 <li class="list-item">Issues</li>
-                 <li class="list-item">Info</li>
+                <li class="list-item">Team</li>
+                <li class="list-item">Contact</li>
+                <li class="list-item">Issues</li>
+                <li class="list-item">Info</li>
                 </ul>
                 <img src="" alt="" class="nucba-icon">
             </nav>
             <div class="info-container">
               <div class="info-content">
-                  <h1 class="title">Share your smile with the world and find friends</h1>
-                   <p class="paragraph">Thousands of new profiles delivered weekly to your inbox</p>
-                 <div class="boton">
-                  <input type="checkbox" name="" id="btn-switch">
-                   <label for="btn-switch" class="lbl-switch"></label>
-                 </div>
-             </div>
+                <h1 class="title">Share your smile with the world and find friends</h1>
+                <p class="paragraph">Thousands of new profiles delivered weekly to your inbox</p>
+                <div class="boton">
+                <input type="checkbox" name="" id="btn-switch">
+                <label for="btn-switch" class="lbl-switch"></label>
+                </div>
+              </div>
             </div>
         </div>
     </main>
@@ -52,6 +53,63 @@
         <div class="personal-desc-content">
             <p>FFreelance is a new company focused on "connecting the creative", offering freelance services for creative people, small and independent companies. A website with a blog where I will be posting all the details required for starting a project from scratch.!</p>
         </div>
+    </div>
+
+    <div class="advantages-container">
+        <div class="advantages-title">
+            <h2>Our Advantages</h2>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+
+        <div class="benefits">
+            <div>
+                <i class="fa-solid fa-city"></i>
+                <h3>Benefit 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, voluptatibus!</p>
+            </div>
+
+            <div>
+                <i class="fa-solid fa-heart"></i>
+                <h3>Benefit 2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, voluptatibus!</p>
+            </div>
+
+            <div>
+                <i class="fa-solid fa-life-ring"></i>
+                <h3>Benefit 3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, voluptatibus!</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="how-work">
+        <div class="work-title">
+            <h2>How we work?</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <ul class="work-list">
+            <li class="work-list-content">
+                <h3>01</h3>
+                <h4>Concept</h4>
+                <p class="work-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+            <li class="work-list-content">
+                <h3>02</h3>
+                <h4>Wireframe</h4>
+                <p class="work-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus minima autem deleniti.</p>
+            </li>
+            <li class="work-list-content">
+                <h3>03</h3>
+                <h4>Prototype + Testing</h4>
+                <p class="work-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum.</p>
+            </li>
+            <li class="work-list-content">
+                <h3>04</h3>
+                <h4>Solution</h4>
+                <p class="work-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
