agrego footer y seccion clients para eduflow

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main class="card-container">
-        <div class="card-content">
+        <section class="card-content">
             <nav class="navbar">
                 <ul class="list">
                 <li class="list-item">Team</li>
@@ -22,20 +22,20 @@
                 <img src="" alt="" class="nucba-icon">
             </nav>
             <div class="info-container">
-              <div class="info-content">
+            <div class="info-content">
                 <h1 class="title">Share your smile with the world and find friends</h1>
                 <p class="paragraph">Thousands of new profiles delivered weekly to your inbox</p>
                 <div class="boton">
                 <input type="checkbox" name="" id="btn-switch">
                 <label for="btn-switch" class="lbl-switch"></label>
                 </div>
-              </div>
             </div>
-        </div>
+            </div>
+        </section>
     </main>
 
-    <div class="personal-container">
-        <div class="personal-content">
+    <section class="personal-container">
+        <article class="personal-content">
             <h2>FFreelance</h2>
             <p>This website focuses on showing freelancers who can help any type of company, production company or agency. Page with unique content relevant to your market. It also carries out abdominal search processes to verify the quality of its freelances.
             </p>
@@ -43,46 +43,46 @@
                 <button>Call to action</button>
                 <button>Learn more</button>
             </div>
-        </div>
+        </article>
         <div class="personal-pic">
             <img src="./images/faq.jpg" alt="" id="faq">
         </div>
-    </div>
+    </section>
 
-    <div class="personal-desc-container">
-        <div class="personal-desc-content">
+    <section class="personal-desc-container">
+        <article class="personal-desc-content">
             <p>FFreelance is a new company focused on "connecting the creative", offering freelance services for creative people, small and independent companies. A website with a blog where I will be posting all the details required for starting a project from scratch.!</p>
-        </div>
-    </div>
+        </article>
+    </section>
 
-    <div class="advantages-container">
-        <div class="advantages-title">
+    <section class="advantages-container">
+        <article class="advantages-title">
             <h2>Our Advantages</h2>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
-        </div>
+        </article>
 
-        <div class="benefits">
+        <article class="benefits">
             <div>
-                <i class="fa-solid fa-city"></i>
+                <i class="fa-solid fa-city" id="b1"></i>
                 <h3>Benefit 1</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, voluptatibus!</p>
             </div>
 
             <div>
-                <i class="fa-solid fa-heart"></i>
+                <i class="fa-solid fa-heart" id="b2"></i>
                 <h3>Benefit 2</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, voluptatibus!</p>
             </div>
 
             <div>
-                <i class="fa-solid fa-life-ring"></i>
+                <i class="fa-solid fa-life-ring" id="b3"></i>
                 <h3>Benefit 3</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, voluptatibus!</p>
             </div>
-        </div>
-    </div>
+        </article>
+    </section>
 
-    <div class="how-work">
+    <section class="how-work">
         <div class="work-title">
             <h2>How we work?</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -110,6 +110,40 @@
                 <p class="work-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </li>
         </ul>
-    </div>
+    </section>
+
+    <section class="clients-container">
+        <h2>Our Clients</h2>
+        <p>A list of company that have worked with us</p>
+        <ul class="clients-content">
+            <li>
+                <a href="https://loopstudio-landing.vercel.app/" target="_blank"><img src="./images/client-pic1.png" alt=""></a>
+            </li>
+            <li>
+                <a href="https://liveshare-ft-nahuel.vercel.app/" target="_blank"><img src="./images/client-pic2.png" alt=""></a>
+            </li>
+            <li>
+                <a href="https://landing-foddys.vercel.app/" target="_blank"><img src="./images/client-pic3.png" alt=""></a>
+            </li>
+            <li>
+                <a href="https://grupos-qatar.vercel.app/" target="_blank"><img src="./images/client-pic4.png" alt=""></a>
+            </li>
+            <li>
+                <a href="https://nucba-pricing-card-challenge.vercel.app/" target="_blank"><img src="./images/client-pic5.png" alt=""></a>
+            </li>
+        </ul>
+    </section>
+
+    <footer>
+        <h2>Contact Us</h2>
+        <h3>Peleloetepu, Surinam</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.7380379326323!2d-55.7158326847479!3d3.163574853944808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8d9e0ed57e964243%3A0xbae536b7613d3c91!2sPeleloetepu%2C%20Surinam!5e0!3m2!1ses!2sar!4v1652390105279!5m2!1ses!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <ul class="footer-list">
+            <li><p><i class="fa-solid fa-location-dot"></i> Calle falsa 123</p></li>
+            <li><p><i class="fa-solid fa-envelope"></i> mail@mail.com</p></li>
+            <li><p><i class="fa-solid fa-phone"></i> 011 01110110</p></li>
+            <li><p><i class="fa-brands fa-instagram"></i> @faq.ezequiel</p></li>
+        </ul>
+    </footer>
 </body>
 </html>
